--- a/catalog/templates/catalog/customer_detail.html
+++ b/catalog/templates/catalog/customer_detail.html
@@ -8,7 +8,7 @@
     <p>Assigned assets:</p>
     <table class="table table-striped table-hover table-bordered">
     <thead>
-      <tr>
+      <tr>zzz
           <td>Hostname</td>
           <td>Model</td>
           <td>S/N</td>
